Feature/936 enhance geolocation (#1077)
* Implement #936 by using existing coffescript modules

* Add comment

* Fix: prevent two JS prompts simultaneously

* Fix: always blur location input

* Prevent double prompt when our fallback suggestion is active

* Add new translations

* Fix bug that prompt only appears only on second click

* Attempt to fix "Alexanderplatz" & striped bug; needs refactoring though

* for #936 - improve geolocation info window handling

* for #936 - multiple fixes for geolocation info window

* for #936 - fix failing search on selected default

* fixed test: now expects empty search_location per default

* calm rubocop

* for #936 - fix tests

* localeapp pull & regenerated translations.js

* Feature/936 enhance geolocation nicole (#1066)

* WIP

* cleanup

* more cleanup

* more cleanup

* delete unnecessary code

* remove comments

* For 936: add notification on nav-sections buttons in case of empty location search input

* for #936 - small code style changes

* for #936 - show main categories even if they are empty

* for #936 - refactor markup render

* for #936 - remove category alert marker when location is present

* updated locales and calmed rubocop

* new auto-generated translations.js

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -315,10 +315,6 @@ ar:
         name_placeholder: الإسم (فرض)
         send: ارسال
         send_us_a_message: اكتب لنا رسالة
-    success:
-      success: 
-    danke:
-      success: 
   emails:
     offers_index:
       family:
@@ -515,6 +511,7 @@ ar:
         msa: Msa
         mul: Mul
         nor: Nor
+        pan: Pan
         pol: Pol
         por: Por
         pus: Pus
@@ -743,6 +740,7 @@ ar:
         msa: لغة ملايو – بهاس ملايو
         mul: لغات أخرى عند الطلب
         nor: لغة نرويجية - Norsk
+        pan: لغة بنجابية - پنجابی / ਪੰਜਾਬੀ
         pol: لغة بولندية - polski
         por: لغة برتغالية - português
         pus: لغة بشتوية - پښتو‎
@@ -826,14 +824,6 @@ ar:
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
       nav_lang:
-        languages:
-          ar: 
-          de: 
-          en: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
         legal_title: On clarat, legal text can only be read in German
         title: 
       navigation:
@@ -869,12 +859,11 @@ ar:
               family: إلى <span class="top-bar__emphasis">كلارات اللاجئين</span> تحول
               refugees: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> تحول
         title: ترجمة فورية
-        meta_description:
-          family: 
-          refugees: 
-        meta_title:
-          family: 
-          refugees: 
+  offer:
+    stamp:
+      target_audience:
+        family_acquaintances: 
+        refugees_adolescents: 
   offers:
     index:
       filters:
@@ -913,7 +902,6 @@ ar:
             parents: للآباء
             pregnant_woman: للحوامل
             relatives: للمعارف والأقارب
-            family_acquaintances: 
       map_sidebar:
         map_output_searchresults: إظهار بطاقة نتائج البحث
       noscript_warning: |
@@ -984,8 +972,6 @@ ar:
           من فضلك ثم بتفعيل جافا سكربت لكي تتمكن من تتمكن من قراءتها
         phone: ":تليفون"
         prof_dr: أ.د.
-        NicoleTest: 
-        PeterFriesen: 
       who_location:
         organizations: " :.عرض من"
       who_section:
@@ -1009,6 +995,7 @@ ar:
       amina: أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. فهي تلاحظ بسرعة ما هو مهم. في كلارات هي تعمل مع فريق البحث وتقرر أي العروض يصلح ليكون ضمن عروض كلارات. أغنيتها المفضلة هي لابريما ايستيت ل. إيرلند أوي.
       andrea: درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وهي تعتني بالشكل العام لكلارات فاميلي. أغنيتها المفضلة هي ورك مي ل. بلاك كيس.
       anja: هي خبيرة إقتصادية ومهندسة. إنها قادرة على التفكير المنطقي السريع. في كلارات هي عضوة بالفريق البحثي. وهي تتأكد من جودة العمل. أغنيتها المفضلة هي وير إز ماي ميند لفرقة بكسييز.
+      ann-sophie: 
       anna: هي متخصصة في علم اللغة. هذا يعني أنها تعرف الكثير عن اللغات المختلفة. وهي على معرفة جيدة بالآداب. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي ١٠٠٩ ل.بونبون.
       anne: درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أغنيتها المفضلة هي دنكين زي جروس  ل.دايشكند.
       astrid: خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أغنيتها المفضلة هي يو جوت مي ل. زاروتس فييت  ل.إريكا بادو.
@@ -1017,9 +1004,11 @@ ar:
       birte: 'درست علوم تربوية. هي لديها خبرة مع الأطفال. يمكنها أن تتصور نفسها في موقف الآخرين. هي عملت أيضا بوسائل إعلام. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي بردرلاين  ل.مادونا. '
       chrissy: هي متخصصة في العلوم السياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع. هي قادرة على التخطيط والتنظيم. في كلارات هي عضوة في الفريق البحثي. وهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي روف هاندي  ل.ألكسيسزأونفير.
       claudia: لديها خبرة في العمل بتجارة التجزئة. يمكنها التعامل مع الناس بشكل جيد. وجمع المعلومات بسرعة. في كلارات هي عضوة في فريق البحث. وهي تساعد مستخدمي الصفحة. أغنيتها المفضلة هي شاندليير  ل.سيا.
+      damjan: 
       eleonore: 'درست الموسيقة والإعلام والإقتصاد. يمكنها جمع المعلومات بسرعة وفهمها. في كلارات هي عضوة في فريق البحث. وهي تعتني بأن يتوصل مستخدمي النت إلى كلارات. أغنيتها المفضلة هي جي فو  ل.زاز. '
       elisa: خبيرة ثقافية. هذا يعني أنها تعرف الكثير عن الثقافات. يمكنها شرح الأمور الصعبة. في كلارات هي عضوة في فريق البحث. هي تعتني أيضاً بالنظام في صفحة كلارات في الإنترنت. أغنيتها المفضلة هي بوت بيهيند ل. كنجس اوف كونفينينس.
       esther: درست علوم ثقافية. هي تعرف التاريخ والسياسة. وتتعلم بسرعة أشياء جديدة. في كلارات هي عضوة في فريق البحث. وتختص بقاموس كلارات. أغنيتها المفضلة هي زس شارمينج مان ل.سمثيز.
+      fabian: 
       franziska: خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي اكسبلانيشنس ل. سيلاه سوي.
       hassan: 'كان يعمل مترجماً للغة الفارسية. الفارسية هي لغته الأم. هو سريع ومنظم في عمله. في كلارات هو عضو في فريق الترجمة ويقوم بترجمة كلارات إلى اللغة الفارسية. أغنيته المفضلة هي لوكينج فور ذا سامر ل. كريس ريا. '
       heading: من وراء كلارات؟
@@ -1042,11 +1031,15 @@ ar:
       lavinia: باحثة في دراسات السلام والصراعات. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. يمكنها اقناع الآخرين بأفكار ما. في كلارات هي عضوة في فريق البحث وتقوم بترتيب العروض حسب الموضوع. أغنيتها المفضلة هي آيام نوت دون ل.فيفر راي.
       line: مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك فهي تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث وهي مختصة بلغة كلارات. أغنيتها المفضلة هي يونيتد ل.موسي.
       lisa: مصممة إبتكارات. هي تحب التطوير عن طريق حلول أخرى مبدعة. كما يمكنها الرسم جيداً. في كلارات هي عضوة في الفريق البحثي وتتواصل مع مستخدمي الصفحة. وتبحث لتكتشف من يستخدم كلارات. أغنيتها المفضلة هي ريزولوشن ل.مات.
+      magdalena: 
       marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي هيستيريا ل. موسي
+      marie: 
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي ديجيتال لوف ل.دافت بونك.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
       nathalie: درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي مي إن يو ل.كونفينينس.
       nils: خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي يين ل. فييتس بروت.
+      omar: 
+      patrick: 
       philipp: درس التاريخ والسياسة والحقوق. يعرف الكثير عن السياسة والمجتمع. يمكنه فهم الأشياء المعقدة. في كلارات هو عضو بالفريق البحثي. أغنيته المفضلة هي زس إز أور سينس لأستروناوتليس
       sabine: هي أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. وهي توضح لنا قوانين اللجوء الألمانية. أغنيتها المفضلة هي فيزنا ل.كينو.
       sophie: 'درست إدارة غير ربحية. يمكنها التنظيم جيداً. كما أنها تدرك بسرعة ما هو مهم للعمل. في كلارات هي عضوة في فريق البحث. وهي تكتشف من يستخدم كلارات وكيف. أغنيتها المفضلة هي لوست ل. فرانك أوسيان   '
@@ -1055,13 +1048,6 @@ ar:
       tine: أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد كتابة القصص. في كلارات هي عضوة في فريق البحث ومختصة بلغة كلارات. أغنيتها المفضلة هي سيرفيف إت ل. جوستبويت.
       title: معلومات عن فريق عمل كلارات
       verena: درست علوم الأجناس. هذا يعني أنها تعرف الكثير عن الأجناس المختلفة وكذلك عن مجتمعنا. يمكنها تنسيق الأمور وترتيبها. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي ميتروبوليس ل. نيونشفارتس.
-      ann-sophie: 
-      damjan: 
-      fabian: 
-      magdalena: 
-      marie: 
-      omar: 
-      patrick: 
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
@@ -1248,8 +1234,6 @@ ar:
     unsubscribe: unsubscribe
     update_requests: طلبات-تحديث
     users: مستخدم
-    dankeschoen: 
-    danke: 
   shareds:
     forms:
       fill_field: من فضلك إملأ هذه الخانة
@@ -1265,6 +1249,10 @@ ar:
           family: عندما تقوم بالنقر هنا؛ تصل إلى كلارات الأسرة. وفي كلارات الأسرة يمكنك البحث عن مساعدة للأطفال والشبان والأسر.
           refugees: عندما تقوم بالنقر هنا؛ تصل إلى كلارات اللاجئين. وفي كلارات-اللاجئين يمكنك البحث عن مساعدة للاجئين
   simple_form:
+    placeholders:
+      search_form:
+        home:
+          query: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
@@ -1290,7 +1278,3 @@ ar:
     new:
       button: الرسالة وصلت
       email_placeholder: عنوان البريد الإليكتروني
-  offer:
-    stamp:
-      target_audience:
-        refugees_adolescents: 
