Feature/1062 show farsi in frontend (#1078)
* initial commit for clarat-org/clarat#1062 - enabled farsi in frontend and pulled localeapp

* For 1062: Refactor rtl styling detection, remove binding to .ar body class

* New auto-generated translations.js

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -842,7 +842,7 @@ ar:
           ar: عربي
           de: Deutsch
           en: English
-          fa: 
+          fa: فارسی
           fr: Français
           pl: Polski
           ru: Русский
