--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -896,7 +896,7 @@ en:
           ar: عربي
           de: Deutsch
           en: English
-          fa: 
+          fa: فارسی
           fr: Français
           pl: Polski
           ru: Русский
