--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -920,7 +920,7 @@ fr:
           ar: عربي
           de: Deutsch
           en: English
-          fa: 
+          fa: فارسی
           fr: Français
           pl: Polski
           ru: Русский
