--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -964,7 +964,7 @@ pl:
           ar: عربي
           de: Deutsch
           en: English
-          fa: 
+          fa: فارسی
           fr: Français
           pl: Polski
           ru: Русский
