--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -956,7 +956,7 @@ ru:
           ar: عربي
           de: Deutsch
           en: English
-          fa: 
+          fa: فارسی
           fr: Français
           pl: Polski
           ru: Русский
