Fix farsi translation

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -733,10 +733,7 @@ fa:
           یک پیشنهاد در محل (%{location}) یافت شد
           %{count} پیشنهاد های در محل  (%{location}) یافت شد
           متاسفانه هیچ پیشنهادی در محل (%{location}) یافت نشد
-      remote_anchor: |-
-        آنلاین و تلفن  (%{count})
-        آنلاین و تلفن  (%{count})
-        {"description"=>"آنلاین و تلفن (%{count})"}
+      remote_anchor: آنلاین و تلفن  (%{count})
       remote_offers: |-
         یک مشاوره تلفنی یا پیشنهاد آنلاین
         %{count} مشاوره های تلفنی و پیشنهاد های آنلاین
