Update javascript translation file

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -990,7 +990,7 @@ fa:
           thu: پنج شنبه
           tue: سه شنبه
           wed: چهارشنبه
-        heading: کی می تونی انجام بدی؟
+        heading: کی می توانی انجام بدهی؟
       speaking: به چه زبانی به تو کمک می شود؟
       website_section:
         internet_presence: اطلاعات بیشتر را کجا در اینترنت پیدا می کنی؟
@@ -1078,7 +1078,7 @@ fa:
       juliane: او در رشته مدیریت اجرایی کسب و کار و صنعت توریسم تحصیل کرده است.او به خوبی نقشه طراحی می کند و را حل های خلاقانه ارائه می دهد.در clarat در کار بازاریابی فعالیت می کند.موسیقی مورد علاقه او Easy از The Commodores می باشد.
       karo: او در رشته اروپا شناسی تحصیل کرده است.این بدین معنی است که او در مورد سیاست اروپا اطلاعات زیادی دارد و می تواند خوب سازمان دهی کند.در clarat در تیم تحقیق وکار با کتاب راهنمای ما فعالیت دارد.موسیقی مورد علاقه او  t Alive از Pearl Jam می باشد.
       katja: او کارشناس زبان آلمانی می باشد.این بدین معنی است که او با متون و همچنین زبان آلمانی به خوبی آشنایی دارد.او به خوبی می تواند بنویسد و به راحتی توضیح بدهد.در clarat در تیم تحقیق فعالیت می کند و کارشناس بخشclarat-Sprache می باشد.موسیقی مورد علاقه او Mysteries از Beth Gibbons می باشد.
-      konstantin: او کارشناس٬ برنامه نویس و توسعه دهنده وبسایت است.این بدین معنی است که او به خوبی می تواند صفحات اینترنتی را برنامه نویسی کند و همیشه راه حل های خوبی را ارائه می دهد.در clarat در تیم IT و انجام کارهای صفحه اینرنتی ما فعالیت دارد.موسیقی مورد علاقه او Too Long ز  Daft Punk می باشد.
+      konstantin: او کارشناس و برنامه نویس و توسعه دهنده وب‌سایت است.این بدین معنی است که او به خوبی می تواند صفحات اینترنتی را برنامه نویسی کند و همیشه راه حل های خوبی را ارائه می دهد.در clarat در تیم IT و انجام کارهای صفحه اینرنتی ما فعالیت دارد.موسیقی مورد علاقه او Too Long از Daft Punk می باشد.
       laura_i: او کارشناس مسافرتی و مطالعات فرهنگی می باشد.او به خوبی می تواند برنامه ریزی کند.او به بازنگری و در یادگیری چیزهای جدید علاقه زیادی دارد.در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Proud Mary از Ike und Tina Turner می باشد.
       laura_w: او در رشته تحقیق و جغرافیای کشورهای در حال توسعه تحصیل کرده است.او اطلاعات زیادی در مورد کشور های در حال توسعه دارد.در در clarat در تیم تحقیق فعالیت می کند و پاسخگوی سوالات استفاده کنندگان از سایت ما می باشد.موسیقی مورد علاقه او Paint It Black از den Rolling Stones می باشد.
       lavinia: او محقق در مورد مسائل جنگ و صلح می باشد.این بدین معنی است که اطلاعات زیادی در مورد تنش و جنگ دارد.او آگاهی زیادی در مورد تفکر دیگران وجلب اعتماد دارد.در clarat در تیم تحقیق و تیم زبان فعالیت دارد.موسیقی مورد علاقه او Lieblingssong ist I'm Not Done از Fever Ray می باشد.
@@ -1095,7 +1095,7 @@ fa:
       patrick: او در رشته تاریخ و سیاست تحصیل کرده است.او به خصوص در مورد کشور جامائیکا آگاهی دارد و می توانی چیزهای پیچیده را به خوبی درک کند.او در clarat در تیم تحقیق فعالیت می کند و موسیقی مورد علاقه او Kingston Be Wise از Protoje می باشد.
       philipp: او در رشته تاریخ٬ سیاست و حقوق تحصیل کرده است.او به خوبی می تواند مسائل پیچیده را درک کند.او در clarat در تیم تحقیق فعالیت می کند و تلاش می کند تا ما بهتر بتوانیم کار کنیم.موسیقی مورد علاقه او his Is Our Science از Astronautalis می باشد.
       sabine: او کارشناس جامعه شناسی است.این بدان معنی است که او اطلاعات زیادی در مورد اجتماع دارد.او به خوبی می تواند مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت می کند و قوانین مربوط به پناهندگان را به ما توضیح می دهد.موسیقی مورد علاقه او Vesna از Kino می باشد.
-      sophie: او در رشته مدیریت سازمانهای ناسودبر تحصیل کرده است.او به خوبی می تواند سازمان دهی کند و به سرعت تشخیص می دهد که چه چیزی مهم است.در کلارات در تیم تحقیق فعالیت دارد و می داند که چه کسانی و چگونه از کلارات استفاده می کنند.موسیقی مورد علاقه او Lost از Frank Ocean می باشد.
+      sophie: او در رشته مدیریت سازمانهای بدون سود تحصیل کرده است.او به خوبی می تواند سازمان دهی کند و به سرعت تشخیص می دهد که چه چیزی مهم است.در clarat در تیم تحقیق فعالیت دارد و می داند که چه کسانی و چگونه از کلارات استفاده می کنند.موسیقی مورد علاقه او Lost از Frank Ocean می باشد.
       stefan: او کارشناس مطالعات فرهنگی است.این بدین معنی است که او اطلاعات زیادی در مورد فرهنگ و جامعه دارد.او به خوبی می تواند انسانها را در مورد موضوعی به وجد بیاورد و او مخترع و بوجود آورنده clarat می باشد.موسیقی مورد علاقه اوRiders On The Storm از The Doors می باشد.
       text: |-
         clarat یک پروژه عام المنفعه متعلق به Benckiser Stiftung Zukunft
@@ -1129,7 +1129,7 @@ fa:
         refugees: پیشنهاد های حمایتی برای پناهندگان
       whom:
         heading: چه کسانی می توانند از clarat استفاده کنند؟
-        text: clarat برای همه است.clarat family برای کودکان٬ جوانان و خانواده‌ها.clarat refugees برای پناهندگان.در صورت داشتن سوالات یا مشکلات می توانی در اینجا حمایت دریافت کنی.برای خود یا خانواده خود و دوستانت و یا اینکه برای انسانهای دیگری که تو آنها را می شناسی و احتیاج به کمک دارند.
+        text: clarat برای استفاده همه افراد است.clarat family برای کودکان و جوانان و خانواده‌ها می باشد و clarat refugees برای پناهندگان.در صورت داشتن سوالات یا مشکلات در اینجا می توانی برای خود یا خانواده خود و دوستانت و یا برای افراد دیگری که آنها را می شناسی و احتیاج به کمک دارند حمایت دریافت می کنی.
       why:
         heading: چرا  clarat وجود دارد؟
         text: |-
