clarat-org/clarat#985
Used existing Offer logic to determine if GoogleTranslation = true for
all languages except DE

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -623,7 +623,7 @@ fa:
     categories_sidebar:
       all_categories: همه طبقات
     cookie_warning_html: |-
-      Cookies به ما در راه اندازی و آماده سازی صفحه کمک می کنند.با استفاده کردن از وب‌سایت موافقت خود از اینکه ما Cookiesها قرار داده اعلام میکنی.
+      Cookies به ما در راه اندازی و آماده سازی صفحه کمک می کنند.با استفاده کردن از وب‌سایت موافقت خود از اینکه ما Cookies ها را قرار داده ایم اعلام می کنی.
       <a href="/refugees/datenschutzhinweise">Mehr</a>.
     geolocation:
       error: موقعیت جغرافیایی شما را نتوانستیم پیدا کنیم.لطفا آن را تایپ کنید
@@ -682,7 +682,7 @@ fa:
         approach: از چه راهی؟
         gender: جنسیت
         language: زبان
-        sort: فیلتر کردن با توجه به
+        sort: 'فیلتر کردن با توجه '
         target_audience: کمک برای چه کسی؟
       option_any: اهمیت ندارد
       pagination:
@@ -1096,7 +1096,7 @@ fa:
       philipp: او در رشته تاریخ٬ سیاست و حقوق تحصیل کرده است.او به خوبی می تواند مسائل پیچیده را درک کند.او در clarat در تیم تحقیق فعالیت می کند و تلاش می کند تا ما بهتر بتوانیم کار کنیم.موسیقی مورد علاقه او his Is Our Science از Astronautalis می باشد.
       sabine: او کارشناس جامعه شناسی است.این بدان معنی است که او اطلاعات زیادی در مورد اجتماع دارد.او به خوبی می تواند مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت می کند و قوانین مربوط به پناهندگان را به ما توضیح می دهد.موسیقی مورد علاقه او Vesna از Kino می باشد.
       sophie: او در رشته مدیریت سازمانهای بدون منفعت تحصیل کرده است و به خوبی می تواند سازمان دهی کند و به سرعت تشخیص می دهد که چه چیزی مهم است.در clarat در تیم تحقیق فعالیت دارد و می داند که چه کسانی و چگونه از کلارات استفاده می کنند.موسیقی مورد علاقه او Lost از Frank Ocean می باشد.
-      stefan: او کارشناس مطالعات فرهنگی است.این بدین معنی است که او اطلاعات زیادی در مورد فرهنگ و جامعه دارد.او به خوبی می تواند انسانها را در مورد موضوعی به وجد بیاورد و او مخترع و بوجود آورنده clarat می باشد.موسیقی مورد علاقه اوRiders On The Storm از The Doors می باشد.
+      stefan: او کارشناس مطالعات فرهنگی است.این بدین معنی است که او اطلاعات زیادی در مورد فرهنگ و جامعه دارد.او به خوبی می تواند انسانها را در مورد موضوعی به هیجان بیاورد و او مخترع  clarat می باشد.موسیقی مورد علاقه اوRiders On The Storm از The Doors می باشد.
       text: |-
         clarat یک پروژه عام المنفعه متعلق به Benckiser Stiftung Zukunft
         (www.benckiser-stiftung.org) می باشد. ما همراه با Benckiser Stiftung از پروژه های موثر مربوط به پشتیبانی کودکان و جوانان حمایت می کنیم.در این راستا یک چیز همیشه به ذهن ما می رسد:خیلی سخت می توان دریافت که چه پیشنهاد های حمایتی به طور کلی وجود دارند و سپس برای ما روشن شد که اگر برای ما کارشناسان تا این حد سخت است نگاه کلی به این موضوع داشته باشیم٬ پس حتما برای کودکان و جوانان که بدنبال کمک واقعی هستند تا چه اندازه سخت تر می تواند باشد و یا برای پناهندگانی که با کشور آلمان آشنایی ندارند؟جواب این سوال:خیلی سخت!و بدین ترتیب ایده پیدایش clarat و تولد آن بوجود آمد.به راحتی کمک یافتن .برای خانواده ها در clarat family و برای پناهندگان در clarat refugees
@@ -1117,7 +1117,7 @@ fa:
     home:
       how:
         heading: نحوه عملکرد clarat چگونه است؟
-        text: " با توجه به داشتن کدام مشکل نیاز به کمک داری یا اینکه چه چیزی تو را آزار می دهد را در اینجا وارد کن و یا اینکه از موضوعات ما انتخاب کن.بعد از آن تمام پیشنهاد های حمایتی در نزدیکی محل سکونت خود را می بینی.ما به تو نیز می گوییم که چگونه کمک دریافت کنی.اینکه تو آیا تلفن یا ایمیل بزنی و یا اینکه حضوری می توانی مراجعه کنی."
+        text: مشکلی را که نیاز به کمک در حل آن داری و یا چیزی که تو را آزار می دهد را در اینجا وارد کن و یا اینکه از موضوعات انتخابی ما استفاده کن.سپس تمام پیشنهاد های حمایتی را در نزدیکی محل سکونت خود مشاهده می کنی.ما به تو نیز می گوییم که چگونه کمک دریافت کنی.اینکه تو آیا از طریق تلفن یا ایمیل ارتباط برقرار کنی و یا اینکه حضوری می توانی مراجعه کنی.
       meta_description:
         family: از طریق clarat family به آسانی کمک پیدا می کنی.پیشنهادات حمایتی برای کودکان٬ جوانان و خانواده‌ها.به صورت آنلاین٬ به روز و در سراسر برلین.
         refugees: از طریق clarat refugees به آسانی کمک پیدا می کنی.پیشنهادات حمایتی برای پناهندگان.به صورت آنلاین٬ به روز٬ به زبانهای مختلف و در سراسر آلمان.
